@@ -475,6 +475,18 @@ name|getMaxBufferedDocs
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+name|IndexWriterConfig
+operator|.
+name|DEFAULT_READER_POOLING
+argument_list|,
+name|conf
+operator|.
+name|getReaderPooling
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|DocumentsWriter
@@ -653,6 +665,13 @@ operator|.
 name|add
 argument_list|(
 literal|"getMaxThreadStates"
+argument_list|)
+expr_stmt|;
+name|getters
+operator|.
+name|add
+argument_list|(
+literal|"getReaderPooling"
 argument_list|)
 expr_stmt|;
 for|for
@@ -878,6 +897,15 @@ operator|.
 name|DEFAULT_RAM_BUFFER_SIZE_MB
 argument_list|,
 literal|0.0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|false
+argument_list|,
+name|IndexWriterConfig
+operator|.
+name|DEFAULT_READER_POOLING
 argument_list|)
 expr_stmt|;
 name|assertEquals
