@@ -492,6 +492,14 @@ argument_list|(
 literal|10
 argument_list|)
 decl_stmt|;
+name|boolean
+name|doReaderPooling
+init|=
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
 name|Map
 argument_list|<
 name|String
@@ -511,6 +519,8 @@ argument_list|,
 name|dir1
 argument_list|,
 name|maxThreadStates
+argument_list|,
+name|doReaderPooling
 argument_list|)
 decl_stmt|;
 name|indexSerial
@@ -604,6 +614,14 @@ argument_list|(
 literal|10
 argument_list|)
 decl_stmt|;
+name|boolean
+name|doReaderPooling
+init|=
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
 name|seed
 operator|++
 expr_stmt|;
@@ -676,6 +694,8 @@ argument_list|,
 name|dir1
 argument_list|,
 name|maxThreadStates
+argument_list|,
+name|doReaderPooling
 argument_list|)
 decl_stmt|;
 name|indexSerial
@@ -1108,6 +1128,9 @@ name|dir
 parameter_list|,
 name|int
 name|maxThreadStates
+parameter_list|,
+name|boolean
+name|doReaderPooling
 parameter_list|)
 throws|throws
 name|IOException
@@ -1186,6 +1209,11 @@ operator|.
 name|setMaxThreadStates
 argument_list|(
 name|maxThreadStates
+argument_list|)
+operator|.
+name|setReaderPooling
+argument_list|(
+name|doReaderPooling
 argument_list|)
 argument_list|)
 decl_stmt|;
